--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -1,15 +1,10 @@
 repositories {
-    flatDir {
-        dirs 'libs'
+    maven {
+        url 'https://dl.bintray.com/intercom/intercom-maven'
     }
 }
 dependencies {
-    compile ('io.intercom.android:intercom-sdk:1.0.3@aar')
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup:otto:1.3.7'
-    compile 'com.squareup.okhttp:okhttp:2.4.0'
-    compile 'com.squareup.okhttp:okhttp-ws:2.4.0'
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.android.gms:play-services-gcm:7.5.0'
+    compile ('io.intercom.android:intercom-sdk:1.1.0@aar') { 
+        transitive = true
+    }
 }
