--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-intercom" version="1.0.7" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-intercom" version="1.0.8" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Intercom</name>
     <author>Intercom</author>
     <license>MIT License</license>
@@ -47,6 +47,7 @@
       <framework src="CoreGraphics.framework" />
       <framework src="CFNetwork.framework" />
       <framework src="libicucore.dylib" />
+      <framework src="libxml2.dylib" />
 
       <config-file target="*-Info.plist" parent="IntercomApiKey">
         <string>$IOS_API_KEY</string>
