--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -4,7 +4,8 @@ repositories {
     }
 }
 dependencies {
-    compile ('io.intercom.android:intercom-sdk:1.1.4@aar') { 
-        transitive = true
+    compile ('io.intercom.android:intercom-sdk-base:1.1.7')
+    compile ('io.intercom.android:intercom-sdk-gcm:1.1.7') {
+        transitive = false
     }
 }
