--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cordova-plugin-intercom",
   "version": "1.1.3",
-  "description": "Cordova plugin for Intercom for mobile",
+  "description": "Official Cordova/PhoneGap plugin for Intercom",
   "cordova": {
     "id": "cordova-plugin-intercom",
     "platforms": [
