Replace <framework> with <source> for compatibility

--- a/plugin.xml
+++ b/plugin.xml
@@ -32,8 +32,8 @@
         </feature>
       </config-file>
 
-      <framework src="src/ios/Intercom.framework" custom="true" />
       <header-file src="src/ios/Intercom.framework/Versions/A/Headers/Intercom.h" />
+      <source-file src="src/ios/Intercom.framework/Versions/A/Intercom" framework="true" />
       <resource-file src="src/ios/Intercom.framework/Versions/A/Resources/Intercom.bundle" />
 
       <framework src="Foundation.framework" />
