Add Photos framework, required by bundled Intercom framework.

--- a/plugin.xml
+++ b/plugin.xml
@@ -38,6 +38,7 @@
 
       <framework src="Foundation.framework" />
       <framework src="UIKit.framework" />
+      <framework src="Photos.framework" />
       <framework src="Accelerate.framework" />
       <framework src="Security.framework" />
       <framework src="SystemConfiguration.framework" />
