--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-intercom" version="3.0.22" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-intercom" version="3.0.23" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Intercom</name>
     <author>Intercom</author>
     <license>MIT License</license>
@@ -15,6 +15,8 @@
 
     <js-module name="Intercom" src="www/intercom.js">
         <clobbers target="intercom" />
+        <clobbers target="cordova.plugins.intercom" />
+        <clobbers target="plugin.intercom" />
     </js-module>
 
 
