--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-intercom" version="3.0.24" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-intercom" version="3.0.25" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>Intercom</name>
     <author>Intercom</author>
     <license>MIT License</license>
@@ -54,6 +54,7 @@
       <framework src="AudioToolbox.framework" />
       <framework src="CoreGraphics.framework" />
       <framework src="CFNetwork.framework" />
+      <framework src="WebKit.framework" />
       <framework src="libicucore.dylib" />
       <framework src="libxml2.dylib" />
     </platform>
