Add support for 'intercom-android-push-type' preference

--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -1,7 +1,18 @@
+def pushType = 'fcm'
+new XmlSlurper().parse(file("../../config.xml")).preference.each {
+    if (it.@name.text() == 'intercom-android-push-type') {
+        pushType = it.@value.text()
+    }
+}
+
 repositories {
     jcenter()
 }
-
 dependencies {
-    compile 'io.intercom.android:intercom-sdk:3.0.20'
+    compile 'io.intercom.android:intercom-sdk-base:3.1.+'
+    if (pushType.toLowerCase() == "gcm") {
+        compile "io.intercom.android:intercom-sdk-gcm:3.1.+"
+    } else {
+        compile "io.intercom.android:intercom-sdk-fcm:3.1.+"
+    }
 }
