Add hook to ensure CocoaPods specs repo is up to date when installing the plugin

--- a/plugin.xml
+++ b/plugin.xml
@@ -21,6 +21,7 @@
 
 
     <platform name="ios">
+      <hook type="before_plugin_install" src="scripts/prepareCocoaPods.js" />
       <hook type="before_build" src="scripts/checkForUpdate.js" />
 
       <header-file src="src/ios/IntercomBridge.h" />
