--- a/src/android/intercom.gradle
+++ b/src/android/intercom.gradle
@@ -10,6 +10,7 @@ buildscript {
     repositories {
         jcenter()
         mavenLocal()
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:+'
@@ -21,6 +22,7 @@ buildscript {
 
 repositories {
     jcenter()
+    maven { url 'https://maven.google.com' }
 }
 dependencies {
     compile 'io.intercom.android:intercom-sdk-base:4.0.+'
