Update CI setups

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: objective-c
 
-node_js:
-  - 7
+node_js: '6.11.2'
 
 sudo: false
 
-before_install:
-  - npm install -g npm@5.3.0
-  
+cache:
+  directories:
+    - node_modules
+
 install:
+  - npm install -g npm@5.3.0
   - npm install -g cordova
 
 before_script:
