--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ general:
 
 machine:
   environment:
-    ORG_GRADLE_PROJECT_cdvCompileSdkVersion: 26
+    ORG_GRADLE_PROJECT_cdvCompileSdkVersion: android-26
     ORG_GRADLE_PROJECT_cdvBuildToolsVersion: 26.0.1
   node:
     version: 6.11.2
