--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
 before_script:
   - cd Example
   - cordova platform add ios --verbose
-  - cordova plugin add /Users/travis/build/intercom/intercom-cordova --verbose
+  - cordova plugin add ../intercom-plugin --verbose
 
 script:
   - cordova build ios
