- removed verbose logging

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
 
 before_script:
   - cd Example
-  - cordova platform add ios --verbose
-  - cordova plugin add ../intercom-plugin --verbose
+  - cordova platform add ios 
+  - cordova plugin add ../intercom-plugin 
 
 script:
   - cordova build ios
