--- a/Example/package.json
+++ b/Example/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "io.intercom.cordova.sample",
-  "version": "0.0.1",
-  "displayName": "Intercom Cordova",
-  "cordova": {
-    "platforms": [
-      "android",
-      "ios"
-    ],
-    "plugins": {
-      "cordova-plugin-whitelist": {}
+    "name": "io.intercom.cordova.sample",
+    "version": "0.0.1",
+    "displayName": "Intercom Cordova",
+    "cordova": {
+        "platforms": [
+            "ios",
+            "android"
+        ],
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        }
+    },
+    "dependencies": {
+        "cordova-android": "^7.1.0",
+        "cordova-ios": "^4.5.4",
+        "cordova-plugin-whitelist": "1.0.0"
     }
-  },
-  "dependencies": {
-    "cordova-android": "^7.0.0",
-    "cordova-ios": "^4.5.4",
-    "cordova-plugin-whitelist": "1.0.0"
-  }
 }
