Add google repo for missing lib

--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -8,6 +8,7 @@ buildscript {
         }
     }
     repositories {
+        google()
         jcenter()
         mavenLocal()
         maven { url 'https://maven.google.com' }
@@ -21,17 +22,18 @@ buildscript {
 }
 
 repositories {
+    google()
     jcenter()
     maven { url 'https://maven.google.com' }
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:5.1.+'
+    compile 'io.intercom.android:intercom-sdk-base:5.1.5'
     if (pushType == 'gcm') {
-        compile 'io.intercom.android:intercom-sdk-gcm:5.1.+'
+        compile 'io.intercom.android:intercom-sdk-gcm:5.1.5'
     } else if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
         compile 'com.google.firebase:firebase-messaging:11.+'
-        compile 'io.intercom.android:intercom-sdk-fcm:5.1.+'
+        compile 'io.intercom.android:intercom-sdk-fcm:5.1.5'
     }
 }
 
