--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   ios:
     macos:
-      xcode: "9.0"
+      xcode: "10.0"
     shell: /bin/bash --login -eo pipefail
     steps:
       - checkout
@@ -24,7 +24,7 @@ jobs:
           command: cd Example && cordova plugin add ../intercom-plugin
       - run:
           name: Build
-          command: cd Example && cordova build ios
+          command: cd Example && cordova build ios --buildFlag="-UseModernBuildSystem=0"
 
   android:
     docker:
