--- a/circle.yml
+++ b/circle.yml
@@ -28,7 +28,7 @@ jobs:
 
   android:
     docker:
-      - image: circleci/android:api-26-alpha
+      - image: circleci/android:api-26-node
     environment:
       - JVM_OPTS: -Xmx3200m
     working_directory: ~/project/Example
