--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ jobs:
           command: command -v node || brew install node
       - run:
           name: Install Cordova
-          command: npm install -g cordova@8.0.0
+          command: npm install -g cordova@9.0.0
       - run:
           name: Setup CocoaPods
           command: curl -sS https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash
@@ -48,7 +48,7 @@ jobs:
           command: sudo apt-get install gradle
       - run:
           name: Install Cordova
-          command: sudo npm install -g cordova
+          command: sudo npm install -g cordova@9.0.0
       - run:
           name: Add Android platform
           command: cd Example && cordova platform add android
