--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -28,10 +28,10 @@ repositories {
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:5.+'
+    compile 'io.intercom.android:intercom-sdk-base:5.4.1'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
         compile 'com.google.firebase:firebase-messaging:17.+'
-        compile 'io.intercom.android:intercom-sdk-fcm:5.+'
+        compile 'io.intercom.android:intercom-sdk-fcm:5.4.1'
     }
 }
 
