--- a/circle.yml
+++ b/circle.yml
@@ -41,8 +41,8 @@ jobs:
       - run:
           name: Install node/npm
           command: |
-            curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-            sudo apt-get install -y nodejs
+            curl -sL https://deb.nodesource.com/setup_10.x | sudo -E bash -
+            sudo apt install -y nodejs
       - run:
           name: Install gradle
           command: sudo apt-get install gradle
