--- a/Example/package.json
+++ b/Example/package.json
@@ -4,16 +4,16 @@
     "displayName": "Intercom Cordova",
     "cordova": {
         "platforms": [
-            "ios",
-            "android"
+            "android",
+            "ios"
         ],
         "plugins": {
             "cordova-plugin-whitelist": {}
         }
     },
     "dependencies": {
-        "cordova-android": "^8.0.0",
-        "cordova-ios": "^5.0.0",
+        "cordova-android": "^8.1.0",
+        "cordova-ios": "^5.0.1",
         "cordova-plugin-whitelist": "^1.0.0"
     }
 }
