--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -28,10 +28,10 @@ repositories {
 }
 
 dependencies {
-    compile 'io.intercom.android:intercom-sdk-base:6.0.0'
+    implementation 'io.intercom.android:intercom-sdk-base:7.1.0'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
-        compile 'com.google.firebase:firebase-messaging:17.+'
-        compile 'io.intercom.android:intercom-sdk-fcm:6.0.0'
+        implementation 'com.google.firebase:firebase-messaging:17.+'
+        implementation 'io.intercom.android:intercom-sdk-fcm:7.1.0'
     }
 }
 
