Add sudo privileges to install npm.

--- a/circle.yml
+++ b/circle.yml
@@ -73,7 +73,7 @@ jobs:
           name: Publish to npm
           command: |
             echo -e "$NPM_USER\n$NPM_PASSWORD\n$NPM_EMAIL"
-            npm install -g npm-cli-login
+            sudo npm install -g npm-cli-login
             npm-cli-login -u $NPM_USER -p $NPM_PASSWORD -e $NPM_EMAIL
             cd intercom-plugin && npm publish
 
