--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -28,10 +28,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.intercom.android:intercom-sdk-base:7.1.1'
+    implementation 'io.intercom.android:intercom-sdk-base:7.2.0-alpha1'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
         implementation 'com.google.firebase:firebase-messaging:17.+'
-        implementation 'io.intercom.android:intercom-sdk-fcm:7.1.1'
+        implementation 'io.intercom.android:intercom-sdk-fcm:7.2.0-alpha1'
     }
 }
 
