--- a/intercom-plugin/src/android/build-extras-intercom.gradle
+++ b/intercom-plugin/src/android/build-extras-intercom.gradle
@@ -2,7 +2,7 @@ import java.util.regex.Matcher
 
 // Uses the app id as a prefix (instead of com.google.android). This prevents
 // INSTALL_FAILED_CONFLICTING_PROVIDER error when installing the app.
-// 
+//
 // @link https://issues.apache.org/jira/browse/CB-10014
 def manifest = new XmlSlurper().parse(file("src/main/AndroidManifest.xml"))
 android.defaultConfig.applicationId manifest.@package.text()
@@ -51,18 +51,18 @@ private static String guideUrl() {
 private void logIfIncorrectCompileSdkVersion() {
     // this can be `{number}` or `android-{number}`
     // regex checks that it ends with a number between 16 and 26 inclusive
-    if (cdvCompileSdkVersion != null && cdvCompileSdkVersion =~ /.*(1[6-9]|2[0-6])$/) {
-        logger.error("${errorPrefix()} cdvCompileSdkVersion = ${cdvCompileSdkVersion}. \n" +
-                "You need to use a cdvCompileSdkVersion of at least 27.\n" +
+    if (cordovaConfig.SDK_VERSION != null && cordovaConfig.SDK_VERSION =~ /.*(1[6-9]|2[0-6])$/) {
+        logger.error("${errorPrefix()} cordovaConfig.SDK_VERSION = ${cordovaConfig.SDK_VERSION}. \n" +
+                "You need to use a cordovaConfig.SDK_VERSION of at least 27.\n" +
                 "See here for more: ${guideUrl()}\n")
     }
 }
 
 private void logIfIncorrectBuildToolsVersion() {
     // regex checks for a major version between 16 and 26 inclusive
-    if (cdvBuildToolsVersion != null && cdvBuildToolsVersion =~ /(1[6-9]|2[0-6])\..+$/) {
-        logger.error("${errorPrefix()}  cdvBuildToolsVersion = ${cdvBuildToolsVersion}. \n" +
-                "You need to use a cdvBuildToolsVersion of at least 27.0.0.\n" +
+    if (cordovaConfig.BUILD_TOOLS_VERSION != null && cordovaConfig.BUILD_TOOLS_VERSION =~ /(1[6-9]|2[0-6])\..+$/) {
+        logger.error("${errorPrefix()}  cordovaConfig.BUILD_TOOLS_VERSION = ${cordovaConfig.BUILD_TOOLS_VERSION}. \n" +
+                "You need to use a cordovaConfig.BUILD_TOOLS_VERSION of at least 27.0.0.\n" +
                 "See here for more: ${guideUrl()}\n")
     }
 }
