--- a/intercom-plugin/src/android/intercom.gradle
+++ b/intercom-plugin/src/android/intercom.gradle
@@ -28,10 +28,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.intercom.android:intercom-sdk-base:10.0.1'
+    implementation 'io.intercom.android:intercom-sdk-base:10.+'
     if (pushType == 'fcm' || pushType == 'fcm-without-build-plugin') {
         implementation 'com.google.firebase:firebase-messaging:20.+'
-        implementation 'io.intercom.android:intercom-sdk-fcm:10.0.1'
+        implementation 'io.intercom.android:intercom-sdk-fcm:10.+'
     }
 }
 
