Update to the latest Intercom iOS SDK (#329)
Updated to use the latest Intercom iOS SDK.
This required a lot of updates to the JS API.
Deprecated a lot of methods, but these will continue to work. They will however be removed in a future release, therefore it is recommended to adopt the new API.

--- a/intercom-plugin/package.json
+++ b/intercom-plugin/package.json
@@ -23,15 +23,15 @@
   "engines": [
     {
       "name": "cordova",
-      "version": ">=9.0.0"
+      "version": ">=12.0.0"
     },
     {
       "name": "cordova-android",
-      "version": ">=10.0.0"
+      "version": ">=13.0.0"
     },
     {
       "name": "cordova-ios",
-      "version": ">=6.2.0"
+      "version": "7.1.0"
     }
   ],
   "author": "Intercom",
